added media queries

--- a/index.html
+++ b/index.html
@@ -71,10 +71,6 @@
 				</p> 
 
 
-			
-
-
-
 		</div>
 			
 
@@ -86,9 +82,9 @@
 		<!-- BOTTOM SECTION -->
 		<div class="bottom">
 			<footer>
-				<p>
-				
-				</p>
+				<div class="foot">
+					
+				</div>
 			</footer>
 		</div>
 		
